--- a/index.html
+++ b/index.html
@@ -3,26 +3,61 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Clone-Cards</title>
+    <title>Clone Cards</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="clone-card">
-      <div class="thumbnail-wrapper">
+    <div class="card">
+      <div class="card-thumbnail-wrapper">
         <img
-          src="https://framerusercontent.com/images/Jri5HpLSGcUFbIyY5fjTAmSaDU.png?scale-down-to=512"
+          class="card-thumbnail"
+          src="https://framerusercontent.com/images/Jri5HpLSGcUFbIyY5fjTAmSaDU.png"
           alt="Scaling Your Site"
-          class="thumbnail"
         />
       </div>
       <div class="card-info">
-        <div class="card-name">
-          <h2>Scaling Your Site</h2>
+        <h1 class="card-title">Scaling Your Site</h1>
+        <p class="card-about">
+          Learn about hosting built for scale and reliability.
+        </p>
+        <div class="read-more-button">
+          <h2 class="read-more-text">Read More</h2>
         </div>
-        <div class="about-card">
-          <h3>Learn about hosting built for scale and reliability.</h3>
+      </div>
+    </div>
+    <div class="card">
+      <div class="card-thumbnail-wrapper">
+        <img
+          class="card-thumbnail"
+          src="https://framerusercontent.com/images/HxSN6zoYMIiYqiNQMZtMNuzLxOI.png?scale-down-to=1024"
+          alt="Optimize for SEO"
+        />
+      </div>
+      <div class="card-info">
+        <h1 class="card-title">Optimize for SEO</h1>
+        <p class="card-about">
+          Learn how Framer can optimize your site for search engines.
+        </p>
+        <div class="read-more-button">
+          <h2 class="read-more-text">Read More</h2>
         </div>
-        <div class="read-more">
-          <h4>Read More</h4>
+      </div>
+    </div>
+    <div class="card">
+      <div class="card-thumbnail-wrapper">
+        <img
+          class="card-thumbnail"
+          src="https://framerusercontent.com/images/kUCJyT0JCEbS69Hu7whB0YnFJbQ.png?scale-down-to=512"
+          alt="CMS Examples"
+        />
+      </div>
+      <div class="card-info">
+        <h1 class="card-title">CMS Examples</h1>
+        <p class="card-about">
+          Get inspired by blogs, job openings, events and more.
+        </p>
+        <div class="read-more-button">
+          <h2 class="read-more-text">Read More</h2>
         </div>
       </div>
     </div>
